--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -26,5 +26,5 @@
     /* Completeness */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": ["./src", "drizzle.config.ts"]
+  "include": ["./src"]
 }
