--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn ./src/main.ts",
     "build": "tsc && tsc-alias",
-    "start": "node ./dist/src/main.js",
+    "start": "node ./dist/main.js",
     "tsc:typecheck": "tsc --noEmit",
     "eslint:fix": "eslint . --fix",
     "drizzle:generate": "drizzle-kit generate",
@@ -18,6 +18,7 @@
     "drizzle-orm": "^0.33.0",
     "express": "^4.19.2",
     "postgres": "^3.4.4",
+    "trpc-openapi": "^1.2.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
