--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -10,6 +10,7 @@
 
     /* Modules */
     "module": "commonjs" /* Specify what module code is generated. */,
+    "rootDir": "./src" /* Specify the root folder within your source files. */,
     "baseUrl": "./",
     "paths": { "@/*": ["./src/*"] },
 
