--- a/package.json
+++ b/package.json
@@ -1,14 +1,9 @@
 {
   "name": "t3",
   "scripts": {
-    "dev": "concurrently \"pnpm --filter @workspace/api run dev\" \"pnpm --filter @workspace/web run dev\"",
-    "dev:api": "pnpm --filter @workspace/api run dev",
-    "dev:web": "pnpm --filter @workspace/web run dev",
-    "build": "pnpm --filter @workspace/api --filter @workspace/web run build",
-    "start": "pnpm --filter @workspace/api run start",
-    "preview": "pnpm --filter @workspace/web run preview",
     "prepare": "husky",
     "clean:folders": "find . \\( -path './.husky/_' -o -name 'node_modules' -o -name 'dist' \\) -exec rm -rf {} +",
+    "clean:tsbuildinfo": "find . -name 'tsconfig.tsbuildinfo' -exec rm -f {} +",
     "clean:lock-files": "find . \\( -name 'package-lock.json' -o -name 'yarn.lock' -o -name 'pnpm-lock.yaml' \\) -exec rm -f {} +",
     "files:to-lf": "find . -name 'node_modules' -prune -o -type f -exec dos2unix {} +",
     "prettier:format": "prettier --write \"**/*.{ts,tsx}\"",
@@ -16,7 +11,13 @@
     "eslint:fix": "pnpm --filter @workspace/api --filter @workspace/web run eslint:fix",
     "drizzle:generate": "pnpm --filter @workspace/api run drizzle:generate",
     "drizzle:migrate": "pnpm --filter @workspace/api run drizzle:migrate",
-    "drizzle:studio": "pnpm --filter @workspace/api run drizzle:studio"
+    "drizzle:studio": "pnpm --filter @workspace/api run drizzle:studio",
+    "dev": "concurrently \"pnpm --filter @workspace/api run dev\" \"pnpm --filter @workspace/web run dev\"",
+    "dev:api": "pnpm --filter @workspace/api run dev",
+    "dev:web": "pnpm --filter @workspace/web run dev",
+    "build": "pnpm --filter @workspace/api --filter @workspace/web run build",
+    "start": "pnpm --filter @workspace/api run start",
+    "preview": "pnpm --filter @workspace/web run preview"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.4.1",
