--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,13 +11,14 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@fontsource/roboto": "^5.0.14",
+    "@fontsource/roboto": "^5.0.15",
     "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.0.2",
-    "@tanstack/react-query": "^5.55.0",
-    "@trpc/client": "11.0.0-rc.487",
-    "@trpc/react-query": "11.0.0-rc.487",
+    "@tanstack/react-query": "^5.55.1",
+    "@trpc/client": "11.0.0-rc.502",
+    "@trpc/react-query": "11.0.0-rc.502",
+    "@trpc/server": "11.0.0-rc.502",
     "@workspace/api": "workspace:*",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
