--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,8 +5,9 @@
     "dev": "ts-node-dev -r tsconfig-paths/register --respawn ./src/main.ts",
     "build": "tsc && tsc-alias",
     "start": "node ./dist/main.js",
-    "tsc:typecheck": "tsc --noEmit",
-    "eslint:fix": "eslint . --fix",
+    "prettier": "prettier --write \"**/*.{ts,tsx}\"",
+    "typecheck": "tsc --noEmit",
+    "eslint": "eslint . --fix",
     "drizzle:generate": "drizzle-kit generate",
     "drizzle:migrate": "ts-node -r tsconfig-paths/register ./src/drizzle/migrate.ts",
     "drizzle:studio": "drizzle-kit studio"
@@ -30,6 +31,7 @@
     "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
     "globals": "^15.9.0",
+    "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.10",
