--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,8 +5,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "preview": "vite preview",
-    "tsc:typecheck": "tsc --noEmit",
-    "eslint:fix": "eslint . --fix"
+    "prettier": "prettier --write \"**/*.{ts,tsx}\"",
+    "typecheck": "tsc --noEmit",
+    "eslint": "eslint . --fix"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -18,8 +19,6 @@
     "@tanstack/react-query": "^5.55.4",
     "@trpc/client": "11.0.0-rc.502",
     "@trpc/react-query": "11.0.0-rc.502",
-    "@trpc/server": "11.0.0-rc.502",
-    "@workspace/api": "workspace:*",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
@@ -29,15 +28,18 @@
   "devDependencies": {
     "@eslint/js": "^9.10.0",
     "@tanstack/eslint-plugin-query": "^5.53.0",
+    "@trpc/server": "11.0.0-rc.502",
     "@types/eslint__js": "^8.42.3",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
+    "@workspace/api": "workspace:*",
     "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "5.1.0-rc-fb9a90fa48-20240614",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
+    "prettier": "^3.3.3",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.5.0",
     "vite": "^5.4.3"
