--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,27 +17,27 @@
     "@mui/icons-material": "^6.1.0",
     "@mui/material": "^6.1.0",
     "@tanstack/react-query": "^5.56.2",
-    "@tanstack/react-query-devtools": "^5.56.2",
     "@trpc/client": "11.0.0-rc.502",
     "@trpc/react-query": "11.0.0-rc.502",
     "@workspace/api": "workspace:*",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
-    "react-router-dom": "^6.26.2",
-    "zod": "^3.23.8"
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.10.0",
     "@tanstack/eslint-plugin-query": "^5.56.1",
+    "@tanstack/react-query-devtools": "^5.56.2",
     "@types/eslint__js": "^8.42.3",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-check-file": "^2.8.0",
     "eslint-plugin-react-hooks": "5.1.0-rc-fb9a90fa48-20240614",
-    "eslint-plugin-react-refresh": "^0.4.11",
+    "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "prettier": "^3.3.3",
     "typescript": "^5.6.2",
