--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,10 +26,11 @@
     "@types/cors": "^2.8.17",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
-    "@types/node": "^22.5.4",
+    "@types/node": "^22.5.5",
     "drizzle-kit": "^0.24.2",
     "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-check-file": "^2.8.0",
     "globals": "^15.9.0",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
