--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,6 +19,7 @@
     "drizzle-orm": "^0.33.0",
     "express": "^4.21.0",
     "postgres": "^3.4.4",
+    "trpc-playground": "^1.0.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
