--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,14 +23,15 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "zustand": "5.0.0-rc.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.10.0",
     "@tanstack/eslint-plugin-query": "^5.56.1",
     "@tanstack/react-query-devtools": "^5.56.2",
     "@types/eslint__js": "^8.42.3",
-    "@types/react": "^18.3.5",
+    "@types/react": "^18.3.6",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
     "eslint": "^9.10.0",
