--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "t3",
   "scripts": {
+    "dev": "concurrently \"pnpm --filter @workspace/api run dev\" \"pnpm --filter @workspace/web run dev\"",
+    "build": "pnpm --filter @workspace/api --filter @workspace/web run build",
+    "preview": "concurrently \"pnpm --filter @workspace/api run start\" \"pnpm --filter @workspace/web run preview\"",
     "prepare": "husky || true",
-    "clean:folders": "find . \\( -path './.husky/_' -o -name 'node_modules' \\) -exec rm -rf {} +",
     "clean:builds": "find . \\( -name 'dist' \\) -exec rm -rf {} +",
+    "clean:folders": "find . \\( -path './.husky/_' -o -name 'node_modules' \\) -exec rm -rf {} +",
     "clean:files": "find . \\( -name 'package-lock.json' -o -name 'yarn.lock' -o -name 'pnpm-lock.yaml' -o -name '*.tsbuildinfo' \\) -exec rm -f {} +",
     "files:to-lf": "find . \\( -name 'node_modules' -o -name 'dist' \\) -prune -o -type f -exec dos2unix {} +",
     "prettier": "pnpm --filter @workspace/api --filter @workspace/web run prettier",
@@ -11,10 +14,7 @@
     "eslint": "pnpm --filter @workspace/api --filter @workspace/web run eslint",
     "drizzle:generate": "pnpm --filter @workspace/api run drizzle:generate",
     "drizzle:migrate": "pnpm --filter @workspace/api run drizzle:migrate",
-    "drizzle:studio": "pnpm --filter @workspace/api run drizzle:studio",
-    "dev": "concurrently \"pnpm --filter @workspace/api run dev\" \"pnpm --filter @workspace/web run dev\"",
-    "build": "pnpm --filter @workspace/api --filter @workspace/web run build",
-    "preview": "concurrently \"pnpm --filter @workspace/api run start\" \"pnpm --filter @workspace/web run preview\""
+    "drizzle:studio": "pnpm --filter @workspace/api run drizzle:studio"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
