--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,11 +20,13 @@
     "@trpc/client": "11.0.0-rc.528",
     "@trpc/react-query": "11.0.0-rc.528",
     "@workspace/api": "workspace:*",
+    "i18next": "^23.15.1",
     "immer": "^10.1.1",
     "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-i18next": "^15.0.2",
     "react-router-dom": "^6.26.2",
     "use-immer": "^0.10.0",
     "zustand": "5.0.0-rc.2"
