--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,11 +14,12 @@
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.1.0",
     "@hookform/resolvers": "^3.9.0",
-    "@mui/icons-material": "^6.1.1",
-    "@mui/material": "^6.1.1",
-    "@tanstack/react-query": "^5.56.2",
-    "@trpc/client": "11.0.0-rc.528",
-    "@trpc/react-query": "11.0.0-rc.528",
+    "@mui/icons-material": "^6.1.2",
+    "@mui/material": "^6.1.2",
+    "@tanstack/react-query": "^5.59.0",
+    "@trpc/client": "11.0.0-rc.553",
+    "@trpc/react-query": "11.0.0-rc.553",
+    "@trpc/server": "11.0.0-rc.553",
     "@workspace/api": "workspace:*",
     "i18next": "^23.15.1",
     "i18next-browser-languagedetector": "^8.0.0",
@@ -35,21 +36,21 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
-    "@tanstack/eslint-plugin-query": "^5.57.1",
-    "@tanstack/react-query-devtools": "^5.56.2",
+    "@tanstack/eslint-plugin-query": "^5.58.1",
+    "@tanstack/react-query-devtools": "^5.59.0",
     "@types/eslint__js": "^8.42.3",
-    "@types/react": "^18.3.9",
+    "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.7.0",
+    "@vitejs/plugin-react-swc": "^3.7.1",
     "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-check-file": "^2.8.0",
     "eslint-plugin-react-hooks": "5.1.0-rc-fb9a90fa48-20240614",
     "eslint-plugin-react-refresh": "^0.4.12",
-    "globals": "^15.9.0",
+    "globals": "^15.10.0",
     "prettier": "^3.3.3",
     "typescript": "^5.6.2",
-    "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.7"
+    "typescript-eslint": "^8.8.0",
+    "vite": "^5.4.8"
   }
 }
