--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,8 +7,7 @@
     "preview": "vite preview",
     "prettier": "prettier --write \"**/*.{ts,tsx}\"",
     "typecheck": "tsc --noEmit",
-    "eslint": "eslint . --fix",
-    "i18next:resources": "i18next-resources-for-ts interface -i ./public/locales/en -o ./src/@types/i18next-resources.d.ts"
+    "eslint": "eslint . --fix"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -24,7 +23,6 @@
     "@workspace/api": "workspace:*",
     "i18next": "^23.15.2",
     "i18next-browser-languagedetector": "^8.0.0",
-    "i18next-http-backend": "^2.6.2",
     "immer": "^10.1.1",
     "notistack": "^3.0.1",
     "react": "^18.3.1",
@@ -49,7 +47,6 @@
     "eslint-plugin-react-hooks": "5.1.0-rc-fb9a90fa48-20240614",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.10.0",
-    "i18next-resources-for-ts": "^1.5.0",
     "prettier": "^3.3.3",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.8.0",
