--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,7 +21,7 @@
     "@trpc/react-query": "11.0.0-rc.566",
     "@trpc/server": "11.0.0-rc.566",
     "@workspace/api": "workspace:*",
-    "i18next": "^23.15.2",
+    "i18next": "^23.16.0",
     "i18next-browser-languagedetector": "^8.0.0",
     "immer": "^10.1.1",
     "notistack": "^3.0.1",
@@ -31,7 +31,7 @@
     "react-i18next": "^15.0.3",
     "react-router-dom": "^6.27.0",
     "use-immer": "^0.10.0",
-    "zustand": "5.0.0-rc.2"
+    "zustand": "5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
@@ -50,6 +50,6 @@
     "prettier": "^3.3.3",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.8.1",
-    "vite": "^5.4.8"
+    "vite": "^5.4.9"
   }
 }
