--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -13,6 +13,7 @@
     "rootDir": "./src" /* Specify the root folder within your source files. */,
     "baseUrl": "./",
     "paths": { "@/*": ["./src/*"] },
+    "resolveJsonModule": true /* Enable importing .json files. */,
 
     /* Emit */
     "outDir": "./dist",
