--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
     "@trpc/react-query": "11.0.0-rc.593",
     "@trpc/server": "11.0.0-rc.593",
     "@workspace/api": "workspace:*",
+    "country-flag-icons": "^1.5.13",
     "i18next": "^23.16.4",
     "i18next-browser-languagedetector": "^8.0.0",
     "immer": "^10.1.1",
@@ -49,7 +50,7 @@
     "globals": "^15.11.0",
     "prettier": "^3.3.3",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.11.0",
+    "typescript-eslint": "^8.12.0",
     "vite": "^5.4.10"
   }
 }
